@@ -2216,3 +2216,15 @@ on_menu_reload_configuration1_activate (GtkMenuItem     *menuitem,
 	main_reload_configuration();
 }
 
+
+void
+on_radio_indent_both_toggled           (GtkToggleButton *togglebutton,
+                                        gpointer         user_data)
+{
+	GtkWidget *check = lookup_widget(ui_widgets.prefs_dialog, "check_detect_indent");
+	gboolean active;
+
+	active = gtk_toggle_button_get_active(togglebutton);
+	gtk_widget_set_sensitive(check, !active);
+}
+
