@@ -1,3 +1,10 @@
+2008-08-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
+   Set 'Detect from file' indent type setting insensitive when Tabs &
+   Spaces is set.
+
+
 2008-08-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/editor.c, src/editor.h:
